# AdInfinitum

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  browse.py  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  urls.json
.github/workflows/: docker-build.yml  gitleaks.yml  mypy.yml  publish.yml  pytest.yml  ruff.yml  uv-lock-check.yml
adinfinitum/: main.py
tests/: test_main.py
