[project]
name = "ad-infinitum"
version = "0.1.0"
description = "Run the AdNauseam browser extension in a Docker container ad infinitum."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "selenium>=4.20.0",
    "pydantic>=2.12.5",
]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.4.0",
]
